<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/cardviewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/item"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/light_grey"
                        android:paddingEnd="4dp"
                        android:paddingStart="8dp"
                        android:paddingTop="8dp"
                        android:text="@string/item"
                        android:textSize="18sp"
                        card_view:layout_constraintEnd_toStartOf="@+id/add"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="171dp"
                        android:layout_height="35dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="8dp"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:paddingTop="8dp"
                        android:text="@string/price"
                        android:textSize="18sp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toBottomOf="@+id/item" />

                    <Button
                        android:id="@+id/add"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/a46"
                        card_view:layout_constraintEnd_toStartOf="@+id/quantity"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="50dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/light_grey"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:paddingTop="8dp"
                        android:text="@string/quantity"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        card_view:layout_constraintEnd_toStartOf="@+id/sub"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/sub"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/a47"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/additem"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/light_grey"
                        android:text="@string/add"
                        android:textColor="@color/grey"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintTop_toBottomOf="@+id/quantity"
                        card_view:layout_constraintVertical_bias="1.0" />

                </android.support.constraint.ConstraintLayout>


            </android.support.v7.widget.CardView>

</RelativeLayout>
